syntax = "proto3";

message BuildFileParams {
  string local_path = 1;
  bytes owner = 2;
  bytes dec_id = 3;
  uint32 chunk_size = 4;
  optional uint32 access = 5;
  optional int32 chunk_method = 6;
}

message BuildDirParams {
  string local_path = 1;
  bytes owner = 2;
  bytes dec_id = 3;
  uint32 chunk_size = 4;
  bytes device_id = 5;
  optional uint32 access = 6;
  optional int32 chunk_method = 7;
}
